--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,9 +1,10 @@
 ---
-import "../styles/base.css";
-import LogoEye from "../components/LogoEye.astro";
+import '../styles/base.css';
+import LogoEye from '../components/LogoEye.astro';
 
-const { title = "Portfolio", bodyClass = "" } = Astro.props;
+const { title = 'Portfolio', bodyClass = '' } = Astro.props;
 ---
+
 <!doctype html>
 <html lang="en">
   <head>
