--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -15,8 +15,9 @@ body {
 }
 
 body {
-  font-family: "Space Mono", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
-    "Courier New", monospace;
+  font-family:
+    'Space Mono', ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono',
+    'Courier New', monospace;
   background: #ffffff;
   color: #032c75;
   line-height: 1.2;
