--- a/src/pages/illustration/index.astro
+++ b/src/pages/illustration/index.astro
@@ -1,19 +1,22 @@
 ---
-import BaseLayout from "../../layouts/BaseLayout.astro";
-import { getCollection } from "astro:content";
+import BaseLayout from '../../layouts/BaseLayout.astro';
+import { getCollection } from 'astro:content';
 
-const entries = await getCollection("illustrations");
+const entries = await getCollection('illustrations');
 ---
+
 <BaseLayout title="Illustration">
   <section class="list-page">
     <h1>Illustration</h1>
     <ul>
-      {entries.map((entry) => (
-        <li>
-          <a href={`/illustration/${entry.slug}`}>{entry.data.title}</a>
-          {entry.data.description && <p>{entry.data.description}</p>}
-        </li>
-      ))}
+      {
+        entries.map((entry) => (
+          <li>
+            <a href={`/illustration/${entry.slug}`}>{entry.data.title}</a>
+            {entry.data.description && <p>{entry.data.description}</p>}
+          </li>
+        ))
+      }
     </ul>
   </section>
 </BaseLayout>
