--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -116,3 +116,27 @@ svg {
   flex: 1;
   padding: var(--page-pad);
 }
+
+.u-pb-1 {
+  padding-bottom: calc(var(--u) * 1);
+}
+
+.u-pb-2 {
+  padding-bottom: calc(var(--u) * 2);
+}
+
+.u-pb-3 {
+  padding-bottom: calc(var(--u) * 3);
+}
+
+.u-pl-1 {
+  padding-left: calc(var(--u) * 1);
+}
+
+.u-pl-2 {
+  padding-left: calc(var(--u) * 2);
+}
+
+.u-pl-3 {
+  padding-left: calc(var(--u) * 3);
+}
