--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/base.css';
 import LogoEye from '../components/LogoEye.astro';
+import logoEyeScript from '../scripts/logo-eye.js?url';
 
 const { title = 'Portfolio', bodyClass = '', showHeader = true } = Astro.props;
 ---
@@ -29,6 +30,6 @@ const { title = 'Portfolio', bodyClass = '', showHeader = true } = Astro.props;
     <main class="page">
       <slot />
     </main>
-    <script type="module" src="/src/scripts/logo-eye.js"></script>
+    <script type="module" src={logoEyeScript}></script>
   </body>
 </html>
