--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,7 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+
+const baseUrl = import.meta.env.BASE_URL;
 ---
 
 <BaseLayout title="About me">
@@ -33,7 +35,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
           physics of V60 coffee, send me a message :)
         </p>
         <div class="about-links">
-          <a class="about-cv" href="/cv.pdf" target="_blank" rel="noreferrer">cv<small>(pdf)</small></a>
+          <a class="about-cv" href={`${baseUrl}cv.pdf`} target="_blank" rel="noreferrer">cv<small>(pdf)</small></a>
           <p class="about-contact">
             message me at
             <a class="about-email" href="mailto:ewa.lazar@proton.me">ewa.lazar@proton.me</a>
