--- a/src/pages/writings/index.astro
+++ b/src/pages/writings/index.astro
@@ -1,12 +1,14 @@
 ---
 import BaseLayout from '../../layouts/BaseLayout.astro';
+
+const baseUrl = import.meta.env.BASE_URL;
 ---
 
 <BaseLayout title="Writings">
   <section class="list-page">
     <ul>
       <li>
-        <a href="/GedankenzurRepetitivitaet.pdf" target="_blank" rel="noreferrer">
+        <a href={`${baseUrl}GedankenzurRepetitivitaet.pdf`} target="_blank" rel="noreferrer">
           Gedanken zur Repetitivität. Künstliche Intelligenz und die Frage nach Aura und der
           Autorschaft <small>(pdf)</small>
         </a>
@@ -15,7 +17,7 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
         </p>
       </li>
       <li>
-        <a href="/KrugerxBeckett.pdf" target="_blank" rel="noreferrer">
+        <a href={`${baseUrl}KrugerxBeckett.pdf`} target="_blank" rel="noreferrer">
           Der Zwang zu Sprechen: Diskurs, Subjekt und Sprachskepsis bei Kruger und Beckett. Eine
           vergleichende Analyse <small>(pdf)</small>
         </a>
