fix: change text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const bottomLinks = [
 ];
 ---
 
-<BaseLayout title="Home" bodyClass="home" showHeader={false}>
+<BaseLayout title="Ewa Lazar" bodyClass="home" showHeader={false}>
   <div class="eyes-background" aria-hidden="true"></div>
   <section class="home">
     <div class="home-card">
